--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "forever": "^3.0.4",
