--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
     "forever": "^3.0.4",
     "react": "^17.0.2",
     "react-dom": "16.13.1",
